[project]
name = "tortuga"
version = "0.0.8"
authors = [
    {name="Al Sweigart", email="al@inventwithpython.com"},
]
description = "Una implementación multilingüe del módulo Turtle.py de Python. A multilingual implementation of Python's turtle.py module."
readme = "README.md"
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "PSF-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/asweigart/tortuga"
Issues = "https://github.com/asweigart/tortuga/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.test]
dependencies = []

